Fixed the game space jump issue

--- a/website/static/css/style.css
+++ b/website/static/css/style.css
@@ -746,7 +746,7 @@ input[type="password"] {
 
 
 
-/* ----------------------------------- game.html -----------------------------------*/
+/* ----------------------------------- game.html ----------------------------------- */
 
 .game-container {
   box-sizing: border-box;
@@ -777,13 +777,6 @@ input[type="password"] {
 .game-container button {
   margin-top: 10px;
 }
-
-#gameover {
-  color: red;
-  font-size: 50px;
-  margin-bottom: 10px;
-}
-
 
 #char {
   width: 90px;
@@ -824,7 +817,7 @@ input[type="password"] {
   width: 45px;
   height: 50px;
   position: relative;
-  top: 35px;
+  top: 30px;
   left: 580px;
 
   background-image: url("ufo.png");
@@ -832,6 +825,7 @@ input[type="password"] {
 
   animation: block 1.5s infinite linear;
 }
+
 
 @keyframes block {
   0% {
@@ -841,4 +835,11 @@ input[type="password"] {
   100% {
     left: -20px;
   }
+}
+
+#gameover {
+  position: center;
+  color: red;
+  font-size: 50px;
+  margin-bottom: none;
 }
